2003-06-15  Guido Guenther  <agx@sigxcpu.org>

	* sysdeps/unix/sysv/linux/mips/Makefile: Add missing endif and
	create $(objpfx).

2003-06-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/check_pf.c (__check_pf): Use __close,
	not close.

	* inet/inet6_option.c (inet6_option_alloc): Add libc_hidden_def.
	* include/netinet/in.h (inet6_option_alloc): Add libc_hidden_proto
	definition.

	* inet/netinet/ip6.h (IP6OPT_PAD1, IP6OPT_PADn): Define.
	* inet/netinet/in.h: Add prototypes for inet6_option_* functions.
	* inet/Makefile (routines): Add inet6_option.
	* inet/inet6_option.c: New file.
	* inet/Versions [GLIBC_2.3.3] (libc): Add inet6_option_space,
	inet6_option_init, inet6_option_append, inet6_option_alloc,
	inet6_option_next, and inet6_option_find.

2003-06-13  Ulrich Drepper  <drepper@redhat.com>

	* inet/netinet/ip6.h (struct ip6_ext): Define.

	* sysdeps/unix/sysv/linux/sys/param.h (howmany): Optimize for gcc.

	Fixing gcc 3.3 warnings, part II.
	* argp/argp-help.c (hol_entry_long_iterate): Always inline.
	* elf/dl-load.c (cache_rpath): Don't inline.
	* iconvdata/cns11642l2.h: Always inline all functions.
	* iconvdata/iso-ir-165.h: Likewise.
	* locale/Makefile (aux): Add coll-lookup.
	* locale/coll-lookup.c: New file.
	* locale/coll-lookup.h (collidx_table_lookup): Do not define here.
	(collseq_table_lookup): Likewise.
	* locale/weightwc.h: Adjust collidx_table_lookup calls for name change.
	* posix/fnmatch_loop.c: Adjust collseq_table_lookup calls for name
	change.
	* posix/regcomp.c: Likewise.
	* posix/regexec.c: Likewise.
	* locale/programs/3level.h (*_get): Always inline.
	* locale/programs/locfile.h: Move definition of handle_copy to...
	* locale/programs/locfile.c: ...here.
	* locale/programs/ld-collate.c (obstack_int32_grow): Always inline.
	(obstack_int32_grow_fast): Likewise.
	(utf8_encode): Likewise.
	(find_element): Avoid aliasing problems.
	(insert_value): Likewise.
	(collate_read): Likewise.